fixes spacing for all elements, changes color for buttons and input elements

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+@font-face {
+    font-family: Robo;
+    src: url('fonts/ROBO.ttf');
+}
+
 body {
-    background-color: #000;
-    color: #5487ff;
+    font-family: 'Open Sans', HelveticaNeue, ArialBlack, Open Sans sans-serif;
 }
 
 .center {
@@ -10,6 +14,58 @@ body {
 .right {
     text-align: right;
     /*float: right;*/
+}
+
+.btn {
+    font-weight: bold;
+}
+
+#headers{
+}
+
+#title {
+    font-family: Robo, HelveticaNeue, ArialBlack, Open Sans sans-serif;
+}
+
+#subtitle {
+    font-weight: bold;
+    font-size: 25px;
+}
+
+#input-parent {
+    margin: 30px;
+    position: relative;
+}
+
+#input-title {
+    color: #4286f4;
+    font-weight: bolder;
+}
+
+#player-input {
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    border: 2px solid #4286f4;
+    font-size: 5em;
+}
+
+#test-circle {
+
+
+}
+
+#submit-button {
+    border-radius: 25px;
+    border: 1px inset #4286f4;
+    background-color: #4286f4;
+    position: absolute;
+    bottom: 10px;
+    right: 30%;
+}
+
+#guesses {
+    margin: 20px 0;
 }
 
 ul {
@@ -22,17 +78,19 @@ ul {
     border: solid 3px black;
     border-radius: 5px;
     font-size: 5em;
-    padding: 0 25px;
+    padding: 0 40px;
 }
 
-img {
-    display: inline;
-    width: 200px;
-    height: 100px;
+#reset-button, #hint-button {
+    color: #fff;
 }
 
-#headers{
+#reset-button {
+    background-color: #f44242;
+}
 
+#hint-button {
+    background-color: #b78d0e;
 }
 
 #footer {
@@ -44,8 +102,14 @@ img {
     display: block;
 }
 
-#footer > .col-sm-4 {
+#footer .col-sm-4 {
     text-align: center;
     margin: 0 auto;
-    padding: 0;
+    padding: 15px 0 0 0;
+    height: 100px;
+}
+
+#footer img {
+    display: inline;
+    width: 250px;
 }
